@@ -14,7 +14,8 @@ simDFM(
   autoreg,
   crossreg,
   var.shock,
-  cov.shock
+  cov.shock,
+  burnin = 1000
 )
 }
 \arguments{
@@ -50,6 +51,8 @@ This is the default method}
 \item{var.shock}{Magnitude of the random shock variance.}
 
 \item{cov.shock}{Magnitude of the random shock covariance}
+
+\item{burnin}{Number of n first samples to discard when computing the factor scores. Defaults to 1000.}
 }
 \description{
 Function to simulate data following a dynamic factor model (DFM). Two DFMs are currently available:
@@ -65,7 +68,7 @@ dynamic factor model with random walk factor scores.
 data1 <- simDFM(variab = 5, timep = 50, nfact = 3, error = 0.05,
 dfm = "DAFS", loadings = 0.7, autoreg = 0.8,
 crossreg = 0.1, var.shock = 0.18,
-cov.shock = 0.36)
+cov.shock = 0.36, burnin = 1000)
  }
 }
 
